2005-08-16  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/Makefile.in :
	* lib/network.c :
	* lib/network.h :
	* lib/rlist.c :
	* lib/rlist.h :

	  - Moved rlist implementation out of network.c and into their own
	    files.

	  - Some general cleanup.

2005-08-15  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* VERSION :
	* configure.ac :

	  - Version 0.3.0

	* lib/rel.c :
	* lib/rel.h :
	* test/test.c :

	  - tbe_rel_calc() now takes a bitmask to indicate which endpoins are
	    defined. This change allows time == 0 to be used as a time value.

2005-08-08  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/rel.c :

	  - tbe_rel_calc() now accepts partial endpoint information and
	    returns a relset. It should be noted *somewhere* that a zero time
	    value (an endpoint) indicates that the time value is not known.

	  - Fixed small error in calc().

	* test/test.c :

	  - Added test for tbe_rel_calc().

	* docs/rel.txt :

	  - Added interval relation definitions to avoid confusion.

2005-08-05  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/rel.c :
	* lib/rel.h :

	  - Added a function, tbe_rel_calc(), that will give the relation
	    that exists between two intervals, as defined by the given
	    endpoints.

2005-08-05  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* VERSION :
	* configure.ac :

	  - Version 0.2.0

	* lib/rel.c :
	* lib/rel.h :

	  - Minor macro correction: from TBE_STR_* to TBE_REL_STR_*.

2005-07-28  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/list.h :
	* lib/list.c :

	  - Added a traverse list function that will go through each node of a
	    given list and call a given function.

	* lib/network.c :

	  - Sacrificed readability for efficiency! The network dump functions
	    now use the traverse list function.

	  - Now add_rel() uses the traverse list function too.

	* test/mem_test.sh :

	  - Removed BASH extensions like arrays, $[], etc.
